<resources>
    <string name="app_name">校园通</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">登录/注册</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="run_errands">跑腿</string>
    <string name="moral">德育</string>
    <string name="secondhand">二手</string>
    <string name="forums">论坛</string>
    <string name="menu_home">Home</string>
    <string name="登录">立即登录</string>
    <string name="注册">立即注册</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="发单">立即发单</string>
    <string name="接单">接单</string>
    <string name="username"> </string>
    <string name="title">标题</string>
    <string name="text">内容\n内容</string>
    <string name="user_avatar">用户头像</string>
    <string name="like_num">点赞数</string>
    <string name="likes_image">赞</string>
    <string name="share_image">分享</string>
    <string name="forwarding_num">分享数</string>
    <string name="chat_image">评论</string>
    <string name="comments_num">评论数</string>
    <string name="forget_word">忘记密码?</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="price">¥0.00</string>
    <string name="date">刚刚</string>
    <string name="showMode">演示模式</string>
    <string name="comment">全部评论</string>
    <string name="userText">userText</string>
    <string name="change_url">数据获取链接更改</string>
<!--    <string name="sh_url">http://rap2api.taobao.org/app/mock/data/2307034</string>-->
<!--    <string name="re_url">http://rap2api.taobao.org/app/mock/data/2307037</string>-->
    <string name="comment_url">http://rap2api.taobao.org/app/mock/data/2324413</string>
<!--    <string name="forum_url">http://rap2api.taobao.org/app/mock/data/2255088</string>-->
<!--    <string name="access_url">http://rap2api.taobao.org/app/mock/data/2329810</string>-->
    <string name="signature"> </string>
    <string name="sh_url">http://xytong.top/secondhand</string>
    <string name="re_url">http://xytong.top/run_errands</string>
    <string name="forum_url">http://xytong.top/forums</string>
    <string name="access_url">http://xytong.top/access</string>
    <string name="user_url">http://xytong.top/user</string>
</resources>