<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_sh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_sh_touch"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_sh_user_avatar_layout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/card_sh_user_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/user_avatar"
                    app:srcCompat="@mipmap/default_user_avatar" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/card_sh_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/card_sh_user_avatar_layout"
                app:layout_constraintTop_toTopOf="@+id/card_sh_user_avatar_layout" />

            <TextView
                android:id="@+id/card_sh_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/date"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/card_sh_user_avatar_layout"
                app:layout_constraintTop_toBottomOf="@+id/card_sh_user_name" />
            <TextView
                android:id="@+id/card_sh_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/price"
                android:textColor="#ff7733"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:paddingTop="4dp"
            android:id="@+id/card_sh_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/card_sh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>


</com.google.android.material.card.MaterialCardView>