<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_comment_touch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_comment_user_avatar_layout"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card_comment_user_avatar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/user_avatar"
            app:srcCompat="@mipmap/default_user_avatar" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/card_comment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/card_comment_user_avatar_layout"
        app:layout_constraintTop_toTopOf="@+id/card_comment_user_avatar_layout" />

    <TextView
        android:id="@+id/card_comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/date"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/card_comment_user_avatar_layout"
        app:layout_constraintTop_toBottomOf="@+id/card_comment_user_name" />


    <TextView
        android:id="@+id/card_comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="4dp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_comment_user_avatar_layout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_comment_likes_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_comment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_comment_user_name">

        <ImageView
            android:id="@+id/card_comment_likes_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/likes_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_comment_likes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_comment_likes"
            app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

        <TextView
            android:id="@+id/card_comment_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like_num"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_comment_likes_image"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
