<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <!--凑数用-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05" />
            <!--卡片底栏之前的内容-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:id="@+id/card_forum_user_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:contentDescription="@string/user_avatar"
                            app:srcCompat="@mipmap/default_user_avatar" />
                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2" />

                        <TextView
                            android:id="@+id/card_forum_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/card_forum_touch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/card_forum_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_forum_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="10dp"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
            <!--凑数用-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/card_forum_likes_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/card_forum_likes_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/likes_image"
                        app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

                    <TextView
                        android:id="@+id/card_forum_likes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/like_num"
                        android:textColor="#aaaaaa"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/chat_image"
                        app:srcCompat="@drawable/ic_baseline_chat_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:id="@+id/card_forum_comments"
                        android:text="@string/comments_num"
                        android:textColor="#aaaaaa"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_forum_forwarding_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/share_image"
                        app:srcCompat="@drawable/ic_baseline_share_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/forwarding_num"
                        android:id="@+id/card_forum_forwarding"
                        android:textColor="#aaaaaa"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>