<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:id="@+id/nav_layout"
              android:layout_height="240dp"
              android:background="@color/dark_gray"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingTop="40dp"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="25dp">

        <ImageView
            android:id="@+id/drawer_user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_avatar"
            app:srcCompat="@color/white"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/drawer_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/drawer_user_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/signature"/>
    </LinearLayout>
</LinearLayout>