<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        android:theme="@style/Theme.校园通.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/Theme.校园通.PopupOverlay"/>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/toolbar_user_avatar_layout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/toolbar_user_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/user_avatar"
                    app:srcCompat="@mipmap/ic_launcher_round"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/toolbar_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/toolbar_user_signature"
                app:layout_constraintStart_toEndOf="@+id/toolbar_user_avatar_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

            <TextView
                android:id="@+id/toolbar_user_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/signature"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toolbar_user_avatar_layout"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_user_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btmNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btmNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/icon_change"
        app:itemRippleColor="@color/sky_blue"
        app:itemTextColor="@drawable/icon_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pager"
        app:layout_constraintTop_toBottomOf="@+id/pager"
        app:menu="@menu/btm_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>